fix: align content vertically (#83)
* fix: align content vertically

* removed navbar caret

* changed navbar color to match bg color

--- a/styles/style.css
+++ b/styles/style.css
@@ -243,10 +243,17 @@ body
 
 .navbar
 {
-  background-color: var(--nav-color) !important;
+  background-color: var(--bg-color) !important;
 }
 
-#navbarNavDropdown
+
+/* This id is important to override Bootstrap */
+#navbar {
+  position: absolute;
+  width: 100%;
+}
+
+#navbarNavDropdown 
 {
   text-align: center;
   justify-content: center;
