--- a/styles/themes/dots.css
+++ b/styles/themes/dots.css
@@ -4,7 +4,7 @@
   --text-color: #fff;
   --sub-color: #fff;
   --icon-color: #fff;
-  --nav-color: #676e8a;
+  /* --nav-color: #676e8a; */
   --nav_icon-color: #fff;
   --primary_btn-color: #4acb8a;
   --danger_btn-color: #f94348;
