--- a/styles/themes/hedge.css
+++ b/styles/themes/hedge.css
@@ -4,7 +4,7 @@
   --text-color: #f7f1d6;
   --sub-color: #f7f1d6;
   --icon-color: #f2efbb;
-  --nav-color: #60814f;
+  /* --nav-color: #60814f; */
   --nav_icon-color: #f7f1d6;
   --primary_btn-color: #74c24b;
   --danger_btn-color: #2c4b1b;
